--- a/platforms/common/scss/admin/_layout-manager.scss
+++ b/platforms/common/scss/admin/_layout-manager.scss
@@ -442,7 +442,7 @@ $atom: #9055AF;
                 right: -10px;
                 width: 6px;
                 background: #00baaa;
-                z-index: 3;
+                z-index: 0;
                 cursor: col-resize;
             }
 
@@ -1052,7 +1052,7 @@ $atom: #9055AF;
     }
 
     .g-inheriting:not(.g-inheriting-children) .g-grid {
-        z-index: 5;
+        z-index: 1;
     }
 
     @include breakpoint(no-mobile) {
